// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search when placeholder is not provided matches the snapshot 1`] = `
<Styled(Input)
  defaultValue=""
  inputSize="M"
  leftIcon="fas fa-search"
  onChange={[Function]}
  placeholder="Search"
  type="text"
/>
`;

exports[`Search when placeholder is provided matches the snapshot 1`] = `
<Styled(Input)
  defaultValue=""
  inputSize="M"
  leftIcon="fas fa-search"
  onChange={[Function]}
  placeholder="Search bt the Topic name"
  type="text"
/>
`;
